# wormhole

./: .gitignore  Cargo.toml  README.md
assets/banks/: Master.bank  Master.strings.bank
fmod-project/Metadata/: Master.xml  Mixer.xml  Tags.xml  Workspace.xml
fmod-project/Metadata/Asset/: {6f563a4f-ad3e-4410-be7c-3e7ae7213b55}.xml
fmod-project/Metadata/Bank/: {67ec59a0-1b7a-414c-b02e-83723157f61d}.xml
fmod-project/Metadata/BankFolder/: {cf88c61c-1cf0-41ba-980a-40e120dd5007}.xml
fmod-project/Metadata/EffectPresetFolder/: {b557a3af-06ee-48b0-8556-385d6572f034}.xml
fmod-project/Metadata/EncodingSetting/: {33a5a923-387b-4662-aa0b-330c8d62d42b}.xml
fmod-project/Metadata/EventFolder/: {dff077d4-27c5-4a7a-b969-2228961afcb3}.xml
fmod-project/Metadata/ParameterPresetFolder/: {cd189231-351b-4ffc-b2a6-cfdc4ef6c22f}.xml
fmod-project/Metadata/Platform/: {55bbb220-6e02-46cf-b730-c2ebb1553d0c}.xml
fmod-project/Metadata/ProfilerFolder/: {1625fbd7-bc67-489a-9f08-c4587a166ecf}.xml
fmod-project/Metadata/Return/: {008d3cbc-fdb8-43ee-a652-6232feedd77a}.xml
fmod-project/Metadata/SandboxFolder/: {2d2e0e5f-4f5a-47a4-ac4f-96dc5e16e229}.xml
fmod-project/Metadata/SnapshotGroup/: {df2c36c2-0d1e-4fcf-a9ad-3dd0701d17e6}.xml
src/: lib.rs  main.rs  player.rs
src/assets/: gltf.rs  loader.rs  materials.rs  models.rs  textures.rs
src/bundles/: player.rs
src/components/: camera.rs  light.rs  mesh_renderer.rs  object.rs  transform.rs
src/input/: controller.rs  events.rs  keyboard.rs  mouse.rs  state.rs  systems.rs
src/light/: light.wgsl  light_object.wgsl  mod.rs  shader.rs
src/lighting/: mod.rs
src/material/: mod.rs  textures.rs
src/object/: mod.rs  object.wgsl  shader.rs  textures.rs
src/physics/: state.rs  systems.rs
src/physics/components/: rigid_body.rs
src/player/: mod.rs  systems.rs
src/render/: binding_helpers.rs  buffer.rs  camera.rs  color.rs  depth_texture.rs  instance.rs  mesh.rs  model.rs  state.rs  system.rs  texture.rs  traits.rs  transform.rs  vertex.rs
src/render/buffer/: dynamic.rs  gbuffer.rs  geometry.rs  instances.rs  mesh.rs  single.rs
src/render/light/: light.wgsl  light_object.wgsl  mod.rs  shader.rs
src/render/material/: mod.rs
src/render/object/: mod.rs  object.wgsl  shader.rs
src/render/shaders/: light.wgsl  light_object.wgsl  object.wgsl  vertex_fetch.wgsl
src/scene/: meshes.rs  mod.rs  models.rs  schedules.rs  world_builder.rs
src/shaders/: light.rs  light.wgsl  light_object.wgsl  object.rs  util.wgsl  vertex_fetch.wgsl
src/systems/: input.rs  render.rs  time.rs
src/time/: fixed.rs  mod.rs  real.rs  systems.rs  virt.rs
