[package]
name = "wormhole"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Windowing
winit = "0.28.6"

# Input
gilrs = "0.10.2"

# Graphics
wgpu = "0.17.0"

# Shaders & math
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.24.0", features = ["mint", "bytemuck"] }
encase = { version = "0.6.1", features = ["glam"] }

# Asset loading
image = "0.24.7"
tobj = "4.0.0"
camino = "1.1.6"
slab = "0.4.9"

# futures (this exists because of the way wgpu works)
pollster = "0.3.0"

# general libraries
once_cell = "1.18.0"
crossbeam = "0.8.2"
color-backtrace = "0.6.0"
itertools = "0.11.0"
rand = "0.8.5"

[profile.release]
debug = true

[features]
capture_mouse = []
