[package]
name = "wormhole"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Windowing
winit = "0.28.6"

# Input
gilrs = "0.10.2"

# Graphics
wgpu = { version = "0.17.0", features = ["naga"] }
naga = { version = "0.13.0" }

# Shaders & math
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.24.0", features = ["mint", "bytemuck"] }
encase = { version = "0.6.1", features = ["glam"] }
naga_oil = "0.9.0"

# Asset loading
image = "0.24.7"
tobj = "4.0.0"
camino = "1.1.6"
slab = "0.4.9"
gltf = { version = "1.3.0", features = ["utils", "names"] }

# futures (this exists because of the way wgpu works)
pollster = "0.3.0"

# general libraries
once_cell = "1.18.0"
crossbeam = "0.8.2"
color-backtrace = "0.6.0"
itertools = "0.11.0"
rand = "0.8.5"
bitflags = { version = "2.4.0", features = ["bytemuck"] }
indexmap = "2.0.2"

# Logging & profiling
log = "0.4.20"
env_logger = "0.10"

tracy_full = "1.5.0"
wgpu-profiler = { version = "0.14.1", features = ["tracy"] }

# Game logic & Physics
bevy_ecs = "0.11.3"
rapier3d = "0.17.2"

[features]
capture_mouse = []

[profile.release]
debug = true

# [profile.dev.package.wgpu]
# opt-level = 3

# [profile.dev.package.image]
# opt-level = 3

# [profile.dev.package.glam]
# opt-level = 3

# [profile.dev.package.gltf]
# opt-level = 3
