[package]
name = "wormhole"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Windowing
winit = { version = "0.29.9", default-features = false, features = [
    "x11",
    "wayland",
    "wayland-dlopen",
    "wayland-csd-adwaita",
    "rwh_06",
] }

# Input
gilrs = "0.10.4"

# Graphics
wgpu = { version = "0.19.1", features = ["naga-ir"] }

# Shaders & math
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.25.0", features = ["mint", "bytemuck"] }
encase = { version = "0.7.0", features = ["glam"] }
naga_oil = "0.13.0"

# Asset loading
image = "0.24.7"
tobj = "4.0.0"
camino = "1.1.6"
slab = "0.4.9"
gltf = { version = "1.4.0", features = ["utils", "names"] }

# futures (this exists because of the way wgpu works)
pollster = "0.3.0"

# general libraries
once_cell = "1.18.0"
color-backtrace = "0.6.0"
itertools = "0.12.0"
rand = "0.8.5"
bitflags = { version = "2.4.0", features = ["bytemuck"] }
indexmap = "2.0.2"

# Threading
parking_lot = "0.12.1"
crossbeam = "0.8.2"

# Logging & profiling
log = "0.4.20"
env_logger = "0.11"

tracy_full = "1.5.0"
# wgpu-profiler = { version = "0.15.0", features = ["tracy"] }

# Game logic & Physics
bevy_ecs = "0.12.1"
rapier3d = "0.18.0"

# Audio
fmod-rs = { version = "2.2.20", git = "https://github.com/Speak2Erase/fmod-rs" }

[features]
capture_mouse = []

[profile.release]
debug = true
